# esp32-nat-router-cpp

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  wizard.json
components/rgbled/rgbled_if/include/rgbled_if/: rgbled_factory.hpp  rgbled_utils.hpp
components/rgbled/rgbled_sk68xxminihs_impl/src/: rgbled_sk68_impl.cpp  sk68xxminihs_factory.cpp
components/user_credential_manager/: CMakeLists.txt
components/user_credential_manager/include/user_credential_manager/: user_credential_manager_config.hpp
components/user_credential_manager/src/: user_credential_manager_impl.cpp
components/wifi_extender/wifi_extender_espidf_impl/: CMakeLists.txt
components/wifi_extender/wifi_extender_espidf_impl/src/: wifi_ap.cpp  wifi_extender_impl.cpp  wifi_extender_impl.hpp  wifi_manager.cpp  wifi_manager.hpp  wifi_scanner.cpp
components/wifi_extender/wifi_extender_if/src/: wifi_extender_config.cpp
components/wifi_nat_router/wifi_nat_router_espidf_impl/: CMakeLists.txt
components/wifi_nat_router/wifi_nat_router_espidf_impl/src/: wifi_ap.hpp  wifi_manager.cpp  wifi_manager.hpp  wifi_nat_router_impl.cpp  wifi_nat_router_impl.hpp  wifi_sta.hpp
components/wifi_nat_router/wifi_nat_router_if/src/: wifi_nat_router_config.cpp
core/factory_reset_pb/: CMakeLists.txt
core/factory_reset_pb/include/factory_reset_pb/: factory_reset_pb.hpp
core/factory_reset_pb/src/: factory_reset_pb.cpp
core/internetactivitymonitor/: CMakeLists.txt
core/internetactivitymonitor/include/internet_activity_monitor/: internet_activity_monitor.hpp
core/internetactivitymonitor/src/: internet_activity_monitor.cpp
core/status_led/include/status_led/: status_led.hpp  status_led_if.hpp
core/status_led/src/: status_led.cpp
core/user_credential_manager/include/user_credential_manager/: user.hpp  user_credential_manager.hpp
core/user_credential_manager/src/: user.cpp  user_credential_manager_impl.cpp
core/webserver/: CMakeLists.txt
core/webserver/include/: webserver.hpp
core/webserver/include/webserver/: webserver.hpp
core/webserver/src/: webserver.cpp  webserver_srvs.cpp  webserver_srvs.hpp
core/wifi_extender_app/: CMakeLists.txt
core/wifi_extender_app/include/: config.hpp  wifi_extender_app.hpp
core/wifi_extender_app/src/: controller.cpp  controller.hpp  model.cpp  model.hpp  network_config_manager.cpp  network_config_manager.hpp  network_status_led.cpp  network_status_led.hpp  webserver.cpp  webserver.hpp  webserver_srvs.cpp  webserver_srvs.hpp  wifi_event_monitor.cpp  wifi_event_monitor.hpp  wifi_extender_app.cpp
core/wifi_nat_router_app/: CMakeLists.txt
core/wifi_nat_router_app/include/: config.hpp  wifi_nat_router_app.hpp  wifi_nat_router_app_config.hpp  wifi_nat_router_app_if.hpp
core/wifi_nat_router_app/src/: internet_activity_monitor.cpp  internet_activity_monitor.hpp  network_config_manager.cpp  network_status_led.cpp  network_status_led.hpp  webserver.cpp  webserver_srvs.cpp  webserver_srvs.hpp  wifi_nat_router_app.cpp  wifi_nat_router_app_command_queue.cpp  wifi_nat_router_app_command_queue.hpp  wifi_nat_router_app_event_queue.cpp  wifi_nat_router_app_event_queue.hpp  wifi_nat_router_app_impl.cpp  wifi_nat_router_app_impl.hpp
main/: CMakeLists.txt  main.cpp
products/prod_esp32_s3/: CMakeLists.txt  product_config.hpp  product_main.cpp  product_main.hpp
(+6 files in other folders)
